@@ -46,8 +46,11 @@
 #include "themoviedbfetcher.h"
 #include "musicbrainzfetcher.h"
 #include "giantbombfetcher.h"
-#include "openlibraryfetcher.cpp"
-#include "multifetcher.cpp"
+#include "openlibraryfetcher.h"
+#include "multifetcher.h"
+#ifdef HAVE_QJSON
+#include "freebasefetcher.h"
+#endif
 
 /**
  * Ideally, I'd like these initializations to be in each cpp file for each collection type
@@ -82,4 +85,7 @@ Tellico::Fetch::FetcherInitializer::FetcherInitializer() {
   RegisterFetcher<Fetch::GiantBombFetcher> registerBomb(GiantBomb);
   RegisterFetcher<Fetch::OpenLibraryFetcher> registerOpenLibrary(OpenLibrary);
   RegisterFetcher<Fetch::MultiFetcher> registerMulti(Multiple);
+#ifdef HAVE_QJSON
+  RegisterFetcher<Fetch::FreebaseFetcher> registerFreebase(Freebase);
+#endif
 }
